Change number object constructor to use valueOf().